tests/fsharp/typecheck/sigs/neg135.bsl

neg135.fs(6,1,6,2): parse error FS0010: Unexpected symbol '}' in expression

neg135.fs(4,5,4,11): parse error FS3122: Missing 'do' in 'while' expression. Expected 'while <expr> do <expr>'.
