tests/fsharp/typecheck/sigs/neg135.fs
module Neg135

let a () = async {
    while! async { return true }
        ()
}